k8s/auth-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mysql
spec:
  selector:
    matchLabels:
      app: JobTH
      service: auth
      db: mysql
  template:
    metadata:
      labels:
        app: JobTH
        service: auth
        db: mysql
    spec:
      containers:
        - name: auth-service-mysql
          imagePullPolicy: IfNotPresent
          image: mysql
          ports:
            - containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: auth-mysql-service
spec:
  selector:
    app: JobTH
    service: auth
    db: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
