k8s/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
spec:
  selector:
    matchLabels:
      app: JobTH
      service: message-broker
  template:
    metadata:
      labels:
        app: JobTH
        service: message-broker
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672

---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: JobTH
    service: message-broker
  ports:
    - port: 15672
      targetPort: 15672
  type: ClusterIP
