k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobth-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.jobth
      http:
        paths:
          - path: /api/auth # api.jobth/api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/profile # api.jobth/api/profile/
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
          - path: /api/job
            pathType: Prefix
            backend:
              service: 
                name: job-service
                port: 
                  number: 80
          - path: /api/administration
            pathType: Prefix
            backend:
              service:
                name: administration-service
                port:
                  number: 80
          - path: /api/application
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 80
